[package]
name = "crypto-ltp-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features = ["full"]}
actix-web = "4.5.1"
actix-rt = "2.9.0"

serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"