[package]
name = "crypto-ltp-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features = ["full"]}
actix-web = "4.5.1"
actix-rt = "2.9.0"
env_logger = "0.11.3"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.35.0"

serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
chrono = "0.4.38"
log = "0.4.21"

[target.'cfg(target_os = "windows")'.dependencies]
openssl-sys = "0.9.102"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }